libraries/ckit/regression/invalid-programs/r28.c

struct t *x;

main () {

 struct t {
  struct s *y;
 };

 (*x).y;

 return(1);
}




